tests/ui/codegen/incorrect-llvm-intrinsic-signature.stderr
error: Intrinsic signature mismatch for `llvm.assume`: expected signature `void (i1)`, found `void ()`
  --> $DIR/incorrect-llvm-intrinsic-signature.rs:7:5
   |
LL |     fn foo();
   |     ^^^^^^^^^

error: aborting due to 1 previous error

